markdown: modify template html for thunderbird.

--- a/thunderbird/thunderbird-signature.html
+++ b/thunderbird/thunderbird-signature.html
@@ -2,16 +2,16 @@
 <meta http-equiv="content-type" content="text/html; charset=gbk"></head><body><span style="font-family: Arial;color:RGB(0,0,0)">
 Best Regards,<br>
 <b>
-Antonao_An &nbsp; 安东<br>
+Antonio_An &nbsp; 安东<br>
 </b>
 <span style="font-family: cursive; font-style: oblique;">
 ===============================================================================<br>
-Realsil Microelectronics Inc. <br>
-瑞晟微电子（苏州）有限公司 <br>
-Tel:  0512-6258-8966   Ext:  56342<br>
+XXXXXXXXXXXXXXXXXX. <br>
+XXXXXXXXXXXXXXXXXX <br>
+Tel:  0512-xxx-xxxx   Ext:  xxxxx<br>
 <b>Mobile: &nbsp;13862047369<br></b>
-<b>E-mail: &nbsp;Antonao_An@realsil.com.cn<br></b>
-2F,No.128,Xishenxu Street, Suzhou Industrial Park, Jiangsu, China. Zip:215027<br>
+<b>E-mail: &nbsp;xxxxxxx<br></b>
+xxxxxxxxxxxxxxxxxxxxxxxxxxx<br>
 ===============================================================================<br>
 </span>
 </span></body></html>
