--- a/email/163-signature.html
+++ b/email/163-signature.html
@@ -1,21 +1,76 @@
 <html>
-<head>
-	<meta http-equiv="content-type" content="text/html; charset=gbk">
-</head>
-<body>
-	<span style="font-family: Arial;color:RGB(0,0,0)">
-	<font style="font-size:130%;line-height:180%;color:black;font-style:italic;">Best Regards,</font><br>
-	<b>
-	<font style="font-size:32px;font-weight:bold;">安 &nbsp;东</font>&nbsp;<br>
-	<font style="font-size:24px;">An &nbsp;Dong</font><br>
-	</b>
-		<span style="font-family: cursive; font-style: oblique;">
-		========================================================================<br>
-		<b>Mobile</b>: &nbsp;13862047369<br>
-		<b>E-mail</b>: &nbsp;antonlee2013@163.com<br>
-		<b>Address</b>: &nbsp;江苏省苏州市金鸡湖大道（原机场路1号）富华苑 (P.C: &nbsp;215021)<br>
-		========================================================================<br>
-		</span>
-	</span>
-</body>
+	<head>
+		<meta http-equiv="content-type" content="text/html; charset=gbk">
+		<style>
+			#body {
+				width: 720px;
+				weight: 106px;
+			}
+			.main {
+				font-family: Arial;
+				color: black;
+				width: 710px;
+				height: 104px;
+			}
+			.name-info {
+				width: 140px;
+				float: left;
+				height: 106px; 
+				line-height: 30px;
+				/*border-style: solid;*/
+				border-right: thick double red;
+			}
+			.best-regards {
+				position: relative;
+				top: 0px;
+				left: 0px;
+				font-size: 130%;
+				line-height: 180%;
+				color: black;
+				font-style: italic;
+			}
+			.chinese-name {
+				position: relative;
+				top: 0px;
+				left: 0px;
+				font-size: 32px;
+				font-weight: bold;
+			}
+			.english-name {
+				position: relative;
+				top: 5px;
+				left: 0px;
+				font-size: 24px;
+			}
+			.detail-info {
+				position: relative;
+				left: 154px;
+				top: -104px;
+				width: 540px;
+				height: 20px; 
+				line-height: 20px;
+				font-family: cursive; 
+				font-style: oblique;
+			}
+		</style>
+	</head>
+
+	<body>
+
+		<div class="main">
+			<div class="name-info">
+				<div class="best-regards">Best Regards</div>
+				<div class="chinese-name">&nbsp; 安 &nbsp;东</div>
+				<div class="english-name">&nbsp; An &nbsp;Dong</div>
+			</div>
+			
+			<div class="detail-info">
+				========================================================================<br>
+				<b>Mobile</b>: &nbsp;13862047369<br>
+				<b>E-mail</b>: &nbsp;antonlee2013@163.com<br>
+				<b>Address</b>: &nbsp;江苏省苏州市金鸡湖大道（原机场路1号）富华苑 (P.C: &nbsp;215021)<br>
+				========================================================================<br>
+			</div>
+		</div>
+	</body>
 </html>
