markdown: modify 163 signature.

--- a/email/163-signature.html
+++ b/email/163-signature.html
@@ -22,23 +22,24 @@
 			}
 			.best-regards {
 				position: relative;
-				top: 0px;
+				top: 3px;
 				left: 0px;
 				font-size: 130%;
-				line-height: 180%;
+				height: 30px; 
+				line-height: 30px;
 				color: black;
 				font-style: italic;
 			}
 			.chinese-name {
 				position: relative;
-				top: 0px;
+				top: 8px;
 				left: 0px;
 				font-size: 32px;
 				font-weight: bold;
 			}
 			.english-name {
 				position: relative;
-				top: 5px;
+				top: 15px;
 				left: 0px;
 				font-size: 24px;
 			}
