markdown: modify 163 signature.

--- a/email/163-signature.html
+++ b/email/163-signature.html
@@ -9,12 +9,14 @@
 			.main {
 				font-family: Arial;
 				color: black;
-				width: 710px;
+				width: 699px;
 				height: 104px;
+				border: 1px gray solid;
 			}
 			.name-info {
 				width: 140px;
-				float: left;
+				position: relative;
+				left: 5px;
 				height: 106px; 
 				line-height: 30px;
 				/*border-style: solid;*/
@@ -24,6 +26,8 @@
 				position: relative;
 				top: 3px;
 				left: 0px;
+				margin-left: auto;
+				margin-right: auto;
 				font-size: 130%;
 				height: 30px; 
 				line-height: 30px;
@@ -45,7 +49,7 @@
 			}
 			.detail-info {
 				position: relative;
-				left: 154px;
+				left: 159px;
 				top: -104px;
 				width: 540px;
 				height: 20px; 
