--- a/email/163-signature.html
+++ b/email/163-signature.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=gbk">
@@ -11,7 +12,6 @@
 				color: black;
 				width: 699px;
 				height: 104px;
-				border: 1px gray solid;
 			}
 			.name-info {
 				width: 140px;
