--- a/email/163-signature.html
+++ b/email/163-signature.html
@@ -1,11 +1,9 @@
-<!DOCTYPE html>
 <html>
 	<head>
-		<meta http-equiv="content-type" content="text/html; charset=gbk">
+		<meta http-equiv="content-type" content="text/html; charset=gbk2312">
 		<style>
 			#body {
 				width: 720px;
-				weight: 106px;
 			}
 			.main {
 				font-family: Arial;
@@ -61,7 +59,6 @@
 	</head>
 
 	<body>
-
 		<div class="main">
 			<div class="name-info">
 				<div class="best-regards">Best Regards</div>
