--- a/email/163-signature.html
+++ b/email/163-signature.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<meta http-equiv="content-type" content="text/html; charset=gbk2312">
+		<meta http-equiv="content-type" content="text/html; charset=gbk">
 		<style>
 			#body {
 				width: 720px;
