markdown: modify 163-signature.

--- a/email/163-signature.html
+++ b/email/163-signature.html
@@ -19,6 +19,7 @@
 				line-height: 30px;
 				/*border-style: solid;*/
 				border-right: thick double red;
+				text-align: center;
 			}
 			.best-regards {
 				position: relative;
@@ -62,8 +63,8 @@
 		<div class="main">
 			<div class="name-info">
 				<div class="best-regards">Best Regards</div>
-				<div class="chinese-name">&nbsp; 安 &nbsp;东</div>
-				<div class="english-name">&nbsp; An &nbsp;Dong</div>
+				<div class="chinese-name">安 &nbsp;东</div>
+				<div class="english-name">An &nbsp;Dong</div>
 			</div>
 			
 			<div class="detail-info">
