markdown: modify 163-signature.

--- a/email/163-signature.html
+++ b/email/163-signature.html
@@ -14,11 +14,10 @@
 			.name-info {
 				width: 140px;
 				position: relative;
-				left: 5px;
+				left: 0px;
 				height: 106px; 
 				line-height: 30px;
 				/*border-style: solid;*/
-				border-right: thick double red;
 				text-align: center;
 			}
 			.best-regards {
@@ -46,10 +45,19 @@
 				left: 0px;
 				font-size: 24px;
 			}
+			.virtual-line {
+				position: relative;
+				left: 150px;
+				top: -104px;
+				width: 2px;
+				height: 104px; 
+				line-height: 106px;
+				border-right: thick double red;
+			}
 			.detail-info {
 				position: relative;
-				left: 159px;
-				top: -104px;
+				left: 170px;
+				top: -208px;
 				width: 540px;
 				height: 20px; 
 				line-height: 20px;
@@ -66,7 +74,7 @@
 				<div class="chinese-name">°² &nbsp;¶«</div>
 				<div class="english-name">An &nbsp;Dong</div>
 			</div>
-			
+			<div class="virtual-line">&nbsp;</div>
 			<div class="detail-info">
 				==================================================================<br>
 				<b>Mobile</b>: &nbsp;13862047369<br>
