markdown: modify 163-signature.

--- a/email/chinese-163-signature.html
+++ b/email/chinese-163-signature.html
@@ -9,7 +9,7 @@
 				font-family: Arial;
 				color: black;
 				width: 699px;
-				height: 106px;
+				height: 104px;
 			}
 			.name-info {
 				width: 140px;
@@ -20,15 +20,13 @@
 				/*border-style: solid;*/
 				text-align: center;
 				/*border: 2px gray solid;*/
-				vertical-align: middle;
-				display: table-cell; 
-				margin-left: auto;
-				margin-right: auto;
 			}
 			.best-regards {
 				position: relative;
-				top: -4px;
+				top: 3px;
 				left: 0px;
+				margin-left: auto;
+				margin-right: auto;
 				font-size: 130%;
 				height: 30px; 
 				line-height: 30px;
@@ -37,14 +35,14 @@
 			}
 			.chinese-name {
 				position: relative;
-				top: 0px;
+				top: 8px;
 				left: 0px;
 				font-size: 32px;
 				font-weight: bold;
 			}
 			.english-name {
 				position: relative;
-				top: 4px;
+				top: 15px;
 				left: 0px;
 				font-size: 24px;
 			}
@@ -60,11 +58,13 @@
 				position: relative;
 				left: 165px;
 				top: -212px;
-				width: 600px;
+				width: 540px;
 				height: 106px; 
 				line-height: 20px;
 				font-family: cursive; 
 				font-style: oblique;
+				margin-top: auto;
+				margin-bottom: auto;
 				vertical-align: middle;
 				display: table-cell; 
 			}
@@ -81,10 +81,10 @@
 			<div class="virtual-line">&nbsp;</div>
 			<div class="detail-info">
 				<!-- ==================================================================<br> -->
-				<b>Mobile</b>: &nbsp;13862047369<br>
-				<b>E-mail</b>: &nbsp;antonlee2013@163.com<br>
-				<b>Address</b>: &nbsp;Fuhuayuan, Jinjihu Street, Suzhou Industrial Park, Jiangsu, China.<br>
-				<b>Zip</b>: &nbsp;215021<br>
+				<b>手机</b>: &nbsp;13862047369<br>
+				<b>邮箱</b>: &nbsp;antonlee2013@163.com<br>
+				<b>地址</b>: &nbsp;江苏省苏州市金鸡湖大道（原机场路1号）富华苑<br>
+				<b>邮政编码</b>: &nbsp;215021<br>
 				<!-- ==================================================================<br> -->
 			</div>
 		</div>
