markdown: modify 163-signature.

--- a/email/chinese-163-signature.html
+++ b/email/chinese-163-signature.html
@@ -9,7 +9,7 @@
 				font-family: Arial;
 				color: black;
 				width: 699px;
-				height: 104px;
+				height: 106px;
 			}
 			.name-info {
 				width: 140px;
@@ -20,13 +20,15 @@
 				/*border-style: solid;*/
 				text-align: center;
 				/*border: 2px gray solid;*/
+				vertical-align: middle;
+				display: table-cell; 
+				margin-left: auto;
+				margin-right: auto;
 			}
 			.best-regards {
 				position: relative;
-				top: 3px;
+				top: -6px;
 				left: 0px;
-				margin-left: auto;
-				margin-right: auto;
 				font-size: 130%;
 				height: 30px; 
 				line-height: 30px;
@@ -35,14 +37,14 @@
 			}
 			.chinese-name {
 				position: relative;
-				top: 8px;
+				top: -2px;
 				left: 0px;
 				font-size: 32px;
 				font-weight: bold;
 			}
 			.english-name {
 				position: relative;
-				top: 15px;
+				top: 2px;
 				left: 0px;
 				font-size: 24px;
 			}
@@ -58,13 +60,11 @@
 				position: relative;
 				left: 165px;
 				top: -212px;
-				width: 540px;
+				width: 600px;
 				height: 106px; 
 				line-height: 20px;
 				font-family: cursive; 
 				font-style: oblique;
-				margin-top: auto;
-				margin-bottom: auto;
 				vertical-align: middle;
 				display: table-cell; 
 			}
