markdown: modify 163-signature.

--- a/email/chinese-163-signature.html
+++ b/email/chinese-163-signature.html
@@ -34,6 +34,7 @@
 				line-height: 30px;
 				color: black;
 				font-style: italic;
+				border-bottom: thick double gray;
 			}
 			.chinese-name {
 				position: relative;
@@ -73,8 +74,8 @@
 
 	<body>
 		<div class="main">
+			<div class="best-regards">Best Regards, </div>
 			<div class="name-info">
-				<div class="best-regards">Best Regards</div>
 				<div class="chinese-name">°² &nbsp;¶«</div>
 				<div class="english-name">An &nbsp;Dong</div>
 			</div>
