--- a/email/chinese-163-signature.html
+++ b/email/chinese-163-signature.html
@@ -9,7 +9,8 @@
 				font-family: Arial;
 				color: black;
 				width: 699px;
-				height: 106px;
+				height: 142px;
+				border-bottom: thick double gray;
 			}
 			.name-info {
 				width: 140px;
