markdown: modify 163-signature.

--- a/email/163-signature.html
+++ b/email/163-signature.html
@@ -56,7 +56,7 @@
 				top: -108px;
 				width: 2px;
 				height: 104px; 
-				border-left: thick double red;
+				border-left: thick double gray;
 			}
 			.detail-info {
 				position: relative;
